Adding twitter notification + refactoring